feat: add deterministic ROM package scanner