@@ -6,131 +6,96 @@ import static org.junit.Assert.assertNotSame;
 import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 
-import com.flynes.emu.data.RomIdentity;
-
 import org.junit.Test;
 
+import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Locale;
+import java.util.zip.CRC32;
 
 public final class GameCatalogTest {
-    private static final RomIdentity IDENTITY_A =
-            new RomIdentity("1111111111111111111111111111111111111111");
-    private static final RomIdentity IDENTITY_B =
-            new RomIdentity("2222222222222222222222222222222222222222");
-
     @Test
-    public void constructorsRejectBlankIdsAndUris() {
+    public void constructorsRejectBlankIdsUrisAndMismatchedPhysicalHashes() {
+        byte[] payload = bytes("payload");
+        RomHashes hashes = hashes(payload, payload);
+        CanonicalGame game = game("game-a");
+        RomVariant variant = variant("variant-a", game, hashes, null);
+
         assertThrows(IllegalArgumentException.class, () -> new RomSource(
-                " ", RomSource.Type.BUILTIN, "asset:///roms", RomSource.PermissionState.NOT_REQUIRED));
-        assertThrows(IllegalArgumentException.class, () -> new RomSource(
-                "builtin", RomSource.Type.BUILTIN, " ", RomSource.PermissionState.NOT_REQUIRED));
+                " ", RomSource.Type.BUILTIN, "asset:///roms",
+                RomSource.PermissionState.NOT_REQUIRED));
         assertThrows(IllegalArgumentException.class, () -> new CanonicalGame(
-                " ", IDENTITY_A, "Contra", "魂斗罗", List.of()));
+                " ", "Contra", "魂斗罗", List.of()));
         assertThrows(IllegalArgumentException.class, () -> new RomVariant(
-                " ", game("game-a", IDENTITY_A), null, RomFormat.INES,
-                CompatibilityState.PLAYABLE));
+                " ", game, null, RomFormat.INES,
+                CompatibilityDecision.playableNes(), hashes));
         assertThrows(IllegalArgumentException.class, () -> new PhysicalPackage(
-                "package-a", builtin(), " ", "contra.nes", PackageFormat.RAW_NES, List.of()));
+                "package-a", builtin(), " ", "contra.nes", PackageFormat.RAW,
+                hashes.physicalPackageSha256(), List.of(variant)));
+        assertThrows(IllegalArgumentException.class, () -> new PhysicalPackage(
+                "package-a", builtin(), "asset:///contra.nes", "contra.nes",
+                PackageFormat.RAW, sha256(bytes("different")), List.of(variant)));
     }
 
     @Test
-    public void packageFormatEnforcesExactEntryPathRules() {
-        RomVariant noEntry = variant("variant-a", game("game-a", IDENTITY_A), null);
-        RomVariant withEntry = variant("variant-b", game("game-b", IDENTITY_B), "folder/game.nes");
+    public void packageFormatEnforcesExactEntryLocatorRules() {
+        byte[] physical = bytes("physical");
+        RomHashes hashes = hashes(bytes("rom"), physical);
+        RomVariant raw = variant("raw", game("game-a"), hashes, null);
+        RomVariant zip = zipVariant("zip", game("game-a"), hashes, "folder/game.nes", 42);
 
         assertThrows(IllegalArgumentException.class, () -> new PhysicalPackage(
-                "zip-a", builtin(), "asset:///games.zip", "games.zip", PackageFormat.ZIP,
-                List.of(noEntry)));
+                "zip", builtin(), "asset:///games.zip", "games.zip", PackageFormat.ZIP,
+                hashes.physicalPackageSha256(), List.of(raw)));
         assertThrows(IllegalArgumentException.class, () -> new PhysicalPackage(
-                "zip-without-locator",
-                builtin(),
-                "asset:///games.zip",
-                "games.zip",
-                PackageFormat.ZIP,
-                List.of(withEntry)));
-        assertThrows(IllegalArgumentException.class, () -> new PhysicalPackage(
-                "raw-a", builtin(), "asset:///game.nes", "game.nes", PackageFormat.RAW_NES,
-                List.of(withEntry)));
-
-        PhysicalPackage empty = new PhysicalPackage(
-                "zip-empty", builtin(), "asset:///empty.zip", "empty.zip", PackageFormat.ZIP,
-                List.of());
-        PhysicalPackage many = new PhysicalPackage(
-                "zip-many", builtin(), "asset:///many.zip", "many.zip", PackageFormat.ZIP,
-                List.of(
-                        zipVariant("variant-a", game("game-a", IDENTITY_A), "a.nes", 0),
-                        zipVariant("variant-b", game("game-b", IDENTITY_B), "b.nes", 64)));
-
-        assertTrue(empty.variants().isEmpty());
-        assertEquals(2, many.variants().size());
+                "raw", builtin(), "asset:///game.nes", "game.nes", PackageFormat.RAW,
+                hashes.physicalPackageSha256(), List.of(zip)));
+        assertEquals(1, new PhysicalPackage(
+                "zip", builtin(), "asset:///games.zip", "games.zip", PackageFormat.ZIP,
+                hashes.physicalPackageSha256(), List.of(zip)).variants().size());
     }
 
     @Test
-    public void zipEntryIdentityIsValidatedAndPropagatedWithSourcePermission() {
+    public void zipEntryIdentityAndSourceStateAreProjected() {
+        byte[] physical = bytes("physical");
+        RomHashes hashes = hashes(bytes("rom"), physical);
         ZipEntryIdentity locator = ZipEntryIdentity.fromRawName(
                 new byte[]{(byte) 0xBB, (byte) 0xEA}, 42);
         RomVariant zipVariant = new RomVariant(
-                "variant-zip",
-                game("game-a", IDENTITY_A),
-                "魂.nes",
-                RomFormat.INES,
-                CompatibilityState.PLAYABLE,
-                locator,
-                ZipNameEncoding.GB18030);
+                "variant-zip", game("game-a"), "魂.nes", RomFormat.INES,
+                CompatibilityDecision.playableNes(), hashes, RomAnalysis.basic(3),
+                locator, ZipNameEncoding.GB18030);
         RomSource source = new RomSource(
-                "tree",
-                RomSource.Type.SAF_TREE,
-                "content://tree/roms",
-                RomSource.PermissionState.GRANTED);
+                "tree", RomSource.Type.SAF_TREE, "content://tree/roms",
+                RomSource.PermissionState.GRANTED,
+                RomSource.Availability.AVAILABLE);
         PhysicalPackage zip = new PhysicalPackage(
-                "package-zip",
-                source,
-                "content://tree/roms/archive.zip",
-                "archive.zip",
-                PackageFormat.ZIP,
-                List.of(zipVariant));
+                "package-zip", source, "content://tree/archive", "archive.zip",
+                PackageFormat.ZIP, hashes.physicalPackageSha256(), List.of(zipVariant));
         GameCatalog catalog = new GameCatalog();
 
         assertTrue(catalog.applyScanResult(ScanResult.success(List.of(zip), List.of())));
-
         GameVariant projected = catalog.resolveVariant("variant-zip").orElseThrow();
         assertEquals(locator, projected.zipEntryIdentity());
         assertEquals(RomSource.PermissionState.GRANTED, projected.sourcePermissionState());
-        assertThrows(IllegalArgumentException.class, () -> new PhysicalPackage(
-                "package-raw",
-                source,
-                "content://tree/roms/game.nes",
-                "game.nes",
-                PackageFormat.RAW_NES,
-                List.of(new RomVariant(
-                        "variant-raw",
-                        game("game-a", IDENTITY_A),
-                        null,
-                        RomFormat.INES,
-                        CompatibilityState.PLAYABLE,
-                        locator,
-                        ZipNameEncoding.GB18030))));
-        assertThrows(IllegalArgumentException.class,
-                () -> new ZipEntryIdentity("0", 0));
-        assertThrows(IllegalArgumentException.class,
-                () -> new ZipEntryIdentity("GG", 0));
-        assertThrows(IllegalArgumentException.class,
-                () -> new ZipEntryIdentity("00", -1));
+        assertEquals(RomSource.Availability.AVAILABLE, projected.sourceAvailability());
     }
 
     @Test
     public void domainCollectionsAreDefensivelyCopied() {
         ArrayList<String> aliases = new ArrayList<>(List.of("Probotector"));
         CanonicalGame canonical = new CanonicalGame(
-                "game-a", IDENTITY_A, "Contra", "魂斗罗", aliases);
+                "game-a", "Contra", "魂斗罗", aliases);
         aliases.add("Gryzor");
-
+        byte[] payload = bytes("payload");
+        RomHashes hashes = hashes(payload, payload);
         ArrayList<RomVariant> variants = new ArrayList<>();
-        variants.add(variant("variant-a", canonical, null));
+        variants.add(variant("variant-a", canonical, hashes, null));
         PhysicalPackage physicalPackage = new PhysicalPackage(
                 "package-a", builtin(), "asset:///contra.nes", "Contra.nes",
-                PackageFormat.RAW_NES, variants);
+                PackageFormat.RAW, hashes.physicalPackageSha256(), variants);
         variants.clear();
 
         assertEquals(List.of("Probotector"), canonical.aliases());
@@ -145,57 +110,38 @@ public final class GameCatalogTest {
     public void fatalScanDoesNotReplaceLastGoodCatalog() {
         GameCatalog catalog = new GameCatalog();
         PhysicalPackage first = rawPackage(
-                "package-a", "variant-a", game("game-a", IDENTITY_A), "Contra (USA).nes");
+                "package-a", "variant-a", game("game-a"), bytes("first"));
         assertTrue(catalog.applyScanResult(ScanResult.success(List.of(first), List.of())));
         List<GameCatalogEntry> before = catalog.canonicalEntries();
 
-        PhysicalPackage replacement = rawPackage(
-                "package-b", "variant-b", game("game-b", IDENTITY_B), "Other.nes");
-        ScanResult fatal = new ScanResult(List.of(replacement), List.of(new ScanIssue(
-                ScanIssue.Code.PERMISSION_REVOKED,
-                ScanIssue.Severity.FATAL,
-                "Built-in source became unavailable")));
+        ScanResult fatal = new ScanResult(List.of(rawPackage(
+                "package-b", "variant-b", game("game-b"), bytes("second"))),
+                List.of(new ScanIssue(
+                        ScanIssue.Code.PERMISSION_REVOKED,
+                        ScanIssue.Severity.FATAL,
+                        "tree",
+                        null)));
 
         assertFalse(catalog.applyScanResult(fatal));
         assertEquals(before, catalog.canonicalEntries());
-        assertEquals("game-a", catalog.canonicalEntries().get(0).canonicalGame().id());
     }
 
     @Test
-    public void sameIdentityAcrossPackagesGroupsIntoOneCanonicalEntry() {
-        CanonicalGame canonical = game("game-a", IDENTITY_A);
-        PhysicalPackage raw = rawPackage(
-                "package-raw", "variant-raw", canonical, "Contra.nes");
-        PhysicalPackage zip = new PhysicalPackage(
-                "package-zip", builtin(), "asset:///collection.zip", "Collection.zip",
-                PackageFormat.ZIP,
-                List.of(zipVariant(
-                        "variant-zip", canonical, "roms/contra.nes", 0)));
+    public void sameCanonicalIdGroupsDifferentPayloadHashesAndMergesSearchMetadata() {
+        CanonicalGame english = new CanonicalGame(
+                "release:contra", "Contra", "", List.of("Probotector"));
+        CanonicalGame chinese = new CanonicalGame(
+                "release:contra", "", "魂斗罗", List.of("Gryzor"));
+        PhysicalPackage first = rawPackage(
+                "package-a", "variant-a", english, bytes("usa"));
+        PhysicalPackage second = rawPackage(
+                "package-b", "variant-b", chinese, bytes("japan"));
         GameCatalog catalog = new GameCatalog();
 
-        assertTrue(catalog.applyScanResult(ScanResult.success(List.of(raw, zip), List.of())));
+        catalog.applyScanResult(ScanResult.success(List.of(second, first), List.of()));
 
         assertEquals(1, catalog.canonicalEntries().size());
         assertEquals(2, catalog.canonicalEntries().get(0).variants().size());
-        assertTrue(catalog.resolveVariant("variant-raw").isPresent());
-        assertTrue(catalog.resolveVariant("variant-zip").isPresent());
-    }
-
-    @Test
-    public void identityGroupingRetainsSearchMetadataFromEveryVariant() {
-        CanonicalGame englishMetadata = new CanonicalGame(
-                "game-a", IDENTITY_A, "Contra", "", List.of("Probotector"));
-        CanonicalGame chineseMetadata = new CanonicalGame(
-                "game-b", IDENTITY_A, "", "魂斗罗", List.of("Gryzor"));
-        PhysicalPackage first = rawPackage(
-                "package-a", "variant-a", englishMetadata, "Contra.nes");
-        PhysicalPackage second = rawPackage(
-                "package-b", "variant-b", chineseMetadata, "魂斗罗.nes");
-        GameCatalog catalog = new GameCatalog();
-
-        catalog.applyScanResult(ScanResult.success(List.of(first, second), List.of()));
-
-        assertEquals(1, catalog.canonicalEntries().size());
         assertEquals("Contra", catalog.canonicalEntries().get(0).canonicalGame().englishTitle());
         assertEquals("魂斗罗", catalog.canonicalEntries().get(0).canonicalGame().zhHansTitle());
         assertEquals(1, catalog.search("probotector").size());
@@ -203,60 +149,68 @@ public final class GameCatalogTest {
     }
 
     @Test
-    public void searchMatchesChineseEnglishAliasesAndOriginalFilenameIgnoringCase() {
-        CanonicalGame canonical = new CanonicalGame(
-                "game-a", IDENTITY_A, "Contra", "魂斗罗", List.of("Probotector", "Gryzor"));
-        PhysicalPackage physicalPackage = rawPackage(
-                "package-a", "variant-a", canonical, "Contra (USA) (Rev A).nes");
+    public void identicalPayloadDoesNotGroupDistinctCanonicalIds() {
+        byte[] payload = bytes("same");
         GameCatalog catalog = new GameCatalog();
-        catalog.applyScanResult(ScanResult.success(List.of(physicalPackage), List.of()));
+        catalog.applyScanResult(ScanResult.success(List.of(
+                rawPackage("package-a", "variant-a", game("release:a"), payload),
+                rawPackage("package-b", "variant-b", game("release:b"), payload)), List.of()));
 
-        assertEquals(1, catalog.search("CONTRA").size());
-        assertEquals(1, catalog.search("魂斗罗").size());
-        assertEquals(1, catalog.search("PROBOTECTOR").size());
-        assertEquals(1, catalog.search("rev a").size());
+        assertEquals(2, catalog.canonicalEntries().size());
+    }
+
+    @Test
+    public void searchMatchesTitlesAliasesOriginalFilenameAndUnknownCandidate() {
+        TitleCandidate filename = new TitleCandidate(
+                "Mysterious Local Name", TitleCandidate.Language.UNKNOWN,
+                TitleCandidate.Origin.OUTER_FILENAME, TitleCandidate.Confidence.LOW,
+                TitleCandidate.ReviewState.NEEDS_REVIEW);
+        CanonicalGame canonical = new CanonicalGame(
+                "game-a", List.of(filename), List.of("Probotector"));
+        GameCatalog catalog = new GameCatalog();
+        catalog.applyScanResult(ScanResult.success(List.of(rawPackage(
+                "package-a", "variant-a", canonical, bytes("payload"))), List.of()));
+
+        assertEquals(1, catalog.search("MYSTERIOUS").size());
+        assertEquals(1, catalog.search("probotector").size());
+        assertEquals(1, catalog.search("package-a").size());
         assertTrue(catalog.search("metroid").isEmpty());
     }
 
     @Test
-    public void successfulReplacementPreservesUserStateByRomIdentity() {
+    public void replacementPreservesUserStateOnlyByStableCanonicalId() {
         GameCatalog catalog = new GameCatalog();
         catalog.applyScanResult(ScanResult.success(List.of(rawPackage(
-                "package-a", "variant-a", game("game-a", IDENTITY_A), "Contra.nes")), List.of()));
-        assertTrue(catalog.setFavorite("game-a", true));
-        assertTrue(catalog.recordSuccessfulLaunch("game-a"));
+                "package-a", "variant-a", game("release:contra"), bytes("v1"))), List.of()));
+        catalog.setFavorite("release:contra", true);
+        catalog.recordSuccessfulLaunch("release:contra");
         GameCatalogEntry before = catalog.canonicalEntries().get(0);
 
         catalog.applyScanResult(ScanResult.success(List.of(rawPackage(
-                "package-b", "variant-b", game("game-renamed", IDENTITY_A), "魂斗罗.nes")), List.of()));
+                "package-b", "variant-b", game("release:contra"), bytes("v2"))), List.of()));
         GameCatalogEntry after = catalog.canonicalEntries().get(0);
 
         assertNotSame(before, after);
         assertTrue(after.favorite());
         assertEquals(1, after.playCount());
-        assertTrue(after.isRecent());
     }
 
     @Test
     public void favoriteAndRecentViewsAreFilteredOrderedAndImmutable() {
         GameCatalog catalog = new GameCatalog();
         catalog.applyScanResult(ScanResult.success(List.of(
-                rawPackage("package-a", "variant-a", game("game-a", IDENTITY_A), "A.nes"),
-                rawPackage("package-b", "variant-b", game("game-b", IDENTITY_B), "B.nes")),
-                List.of()));
+                rawPackage("package-a", "variant-a", game("game-a"), bytes("a")),
+                rawPackage("package-b", "variant-b", game("game-b"), bytes("b"))), List.of()));
         catalog.setFavorite("game-a", true);
         catalog.recordSuccessfulLaunch("game-a");
         catalog.recordSuccessfulLaunch("game-b");
 
-        List<GameCatalogEntry> favorites = catalog.favoriteEntries();
-        List<GameCatalogEntry> recent = catalog.recentEntries();
-
-        assertEquals(List.of("game-a"), favorites.stream()
-                .map(entry -> entry.canonicalGame().id()).collect(java.util.stream.Collectors.toList()));
-        assertEquals(List.of("game-b", "game-a"), recent.stream()
-                .map(entry -> entry.canonicalGame().id()).collect(java.util.stream.Collectors.toList()));
-        assertThrows(UnsupportedOperationException.class, favorites::clear);
-        assertThrows(UnsupportedOperationException.class, recent::clear);
+        assertEquals(List.of("game-a"), catalog.favoriteEntries().stream()
+                .map(item -> item.canonicalGame().id()).toList());
+        assertEquals(List.of("game-b", "game-a"), catalog.recentEntries().stream()
+                .map(item -> item.canonicalGame().id()).toList());
+        assertThrows(UnsupportedOperationException.class, catalog.favoriteEntries()::clear);
+        assertThrows(UnsupportedOperationException.class, catalog.recentEntries()::clear);
     }
 
     private static RomSource builtin() {
@@ -265,42 +219,67 @@ public final class GameCatalogTest {
                 RomSource.PermissionState.NOT_REQUIRED);
     }
 
-    private static CanonicalGame game(String id, RomIdentity identity) {
-        return new CanonicalGame(id, identity, "Contra", "魂斗罗", List.of("Probotector"));
+    private static CanonicalGame game(String id) {
+        return new CanonicalGame(id, "Contra", "魂斗罗", List.of("Probotector"));
     }
 
-    private static RomVariant variant(String id, CanonicalGame game, String entryPath) {
-        return new RomVariant(id, game, entryPath, RomFormat.INES, CompatibilityState.PLAYABLE);
+    private static RomVariant variant(
+            String id, CanonicalGame game, RomHashes hashes, String entryPath) {
+        return new RomVariant(
+                id, game, entryPath, RomFormat.INES,
+                CompatibilityDecision.playableNes(), hashes);
     }
 
     private static RomVariant zipVariant(
             String id,
             CanonicalGame game,
+            RomHashes hashes,
             String entryPath,
-            int localHeaderOffset) {
+            int offset) {
         return new RomVariant(
-                id,
-                game,
-                entryPath,
-                RomFormat.INES,
-                CompatibilityState.PLAYABLE,
+                id, game, entryPath, RomFormat.INES,
+                CompatibilityDecision.playableNes(), hashes, RomAnalysis.basic(3),
                 ZipEntryIdentity.fromRawName(
-                        entryPath.getBytes(java.nio.charset.StandardCharsets.UTF_8),
-                        localHeaderOffset),
+                        entryPath.getBytes(StandardCharsets.UTF_8), offset),
                 ZipNameEncoding.UTF8_EFS);
     }
 
     private static PhysicalPackage rawPackage(
-            String packageId,
-            String variantId,
-            CanonicalGame canonical,
-            String originalFilename) {
+            String packageId, String variantId, CanonicalGame game, byte[] payload) {
+        RomHashes hashes = hashes(payload, payload);
         return new PhysicalPackage(
-                packageId,
-                builtin(),
-                "asset:///" + originalFilename,
-                originalFilename,
-                PackageFormat.RAW_NES,
-                List.of(variant(variantId, canonical, null)));
+                packageId, builtin(), "asset:///" + packageId,
+                packageId + ".nes", PackageFormat.RAW,
+                hashes.physicalPackageSha256(),
+                List.of(variant(variantId, game, hashes, null)));
+    }
+
+    private static RomHashes hashes(byte[] payload, byte[] physical) {
+        CRC32 crc = new CRC32();
+        crc.update(payload);
+        return new RomHashes(
+                digest("SHA-1", payload), digest("SHA-256", payload),
+                digest("SHA-256", physical),
+                String.format(Locale.ROOT, "%08X", crc.getValue()));
+    }
+
+    private static String sha256(byte[] bytes) {
+        return digest("SHA-256", bytes);
+    }
+
+    private static String digest(String algorithm, byte[] bytes) {
+        try {
+            StringBuilder result = new StringBuilder();
+            for (byte value : MessageDigest.getInstance(algorithm).digest(bytes)) {
+                result.append(String.format(Locale.ROOT, "%02X", value & 0xFF));
+            }
+            return result.toString();
+        } catch (Exception impossible) {
+            throw new AssertionError(impossible);
+        }
+    }
+
+    private static byte[] bytes(String value) {
+        return value.getBytes(StandardCharsets.UTF_8);
     }
 }
